--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -11,6 +11,7 @@
 @import "footer";
 @import "style";
 /*PANELY A SEKCE*/
+@import "obsahovaNavigace";
 @import "seznamkapitol";
 @import "seznampostav";
 @import "profily";
